# ci2b_BCI_Comp_III

./: NEXT_STEPS.md  pyproject.toml
scripts/: 01_preprocessing.py  02_preprocessing.py  test.m
src/eeg_preproc/: __init__.py  bad_channels.py  filtering.py
